--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Travisprice08/myFlix-Client#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "parcel": "^2.0.0-nightly.746",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
